@@ -14,7 +14,6 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class IntentionService implements IIntentionService {
@@ -76,14 +75,8 @@ public class IntentionService implements IIntentionService {
 
     @Override
     public List<Intention> getIntentionActive() {
-        List<Intention> intentions = intentionRepo.findAll();
-
-        List<Intention> activeIntentions = intentions.stream()
-                .filter(i -> i.isTaken()== false)
-                .collect(Collectors.toList());
-
-        return (activeIntentions.size() > 0 ? activeIntentions : (List<Intention>) new ResourceNotFound("Not found intention active")
-        );
-    };
-
+        return intentionRepo.findAll().stream()
+                .filter(i -> !i.isTaken())
+                .toList();
+    }
 }
